syntax = "proto3";

option csharp_namespace = "gRPC_Unary_Client.Protos";

package message;

service Message {
    rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
    string name = 1;
    string message = 2;
}

message MessageResponse {
    string message = 1;
}


